--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <link rel="stylesheet" href="/stylesheets/homeStyle.css">
 </head>
 <body>
   <div class="navbar">
@@ -10,9 +11,17 @@
     <div class="search-container">
       <form action="" method="post">
         <input type="text" placeholder="Search for petitions" required>
-        <button type="submit">Search</button>
+        <button type="submit" class="search">Search</button>
+        <button type="button" class="create"> + Create Petition</button>
       </form>
     </div>
+  </div>
+  <div class="petition-list">
+      <div th:each="petition : ${petitions}" class="petition">
+          <h2 th:text="${petition.title}"></h2>
+          <p th:text="${petition.description}"></p>
+          <a th:href="@{/petitions/{ID}{ID=${petition.ID}}}">View</a>
+      </div>
   </div>
 </body>
 </html>
