--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,7 +12,9 @@
       <form action="" method="post">
         <input type="text" placeholder="Search for petitions" required>
         <button type="submit" class="search">Search</button>
-        <button type="button" class="create"> + Create Petition</button>
+        <button type="button" class="create">
+            <a href="/create"> + Create a Petition</a>
+        </button>
       </form>
     </div>
   </div>
