Change path to stylesheet for docker/tomcat

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/stylesheets/homeStyle.css">
+    <link rel="stylesheet" href="/ryan_petitions-3.4.0/stylesheets/homeStyle.css">
 </head>
 <body>
   <div class="navbar">
