--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -13,7 +13,7 @@
         <input type="text" placeholder="Search for petitions" required>
         <button type="submit" class="search">Search</button>
         <button type="button" class="create">
-            <a href="/create"> + Create a Petition</a>
+            <a th:href="@{/create}"> + Create a Petition</a>
         </button>
       </form>
     </div>
