--- a/src/main/resources/templates/create-petition.html
+++ b/src/main/resources/templates/create-petition.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Create Petition</title>
+    <link rel="stylesheet" th:href="@{/stylesheets/homeStyle.css}">
 </head>
 <body>
     <div class="new-petition">
