--- a/src/main/resources/templates/create-petition.html
+++ b/src/main/resources/templates/create-petition.html
@@ -7,12 +7,12 @@
 </head>
 <body>
     <div class="new-petition">
-        <form action="/petitions/create" method="post">
+        <form action="#" method="post">
             <label>Title:</label>
             <input type="text" name="title" required>
             <label>Description:</label>
             <textarea name="description" required></textarea>
-            <button type="submit">Create Petition</button>
+            <button type="submit" class="create-button">Create</button>
         </form>
     </div>
 </body>
