Add simple search-results.html base on home.html Add logic and route of search to controller

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,8 +9,8 @@
   <div class="navbar">
     <h1>Petitions</h1>
     <div class="search-container">
-      <form action="" method="post" class="search-form">
-        <input type="text" placeholder="Search for petitions" required>
+      <form action="/search" method="get" class="search-form">
+        <input type="text" placeholder="Search for petitions" name="search" required>
         <button type="submit" class="search">Search</button>
       </form>
         <button type="button" class="create">
