Change search form action

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
   <div class="navbar">
     <h1>Petitions</h1>
     <div class="search-container">
-      <form action="/search" method="get" class="search-form">
+      <form action="${{ '/search' }}" method="get" class="search-form">
         <input type="text" placeholder="Search for petitions" name="search" required>
         <button type="submit" class="search">Search</button>
       </form>
