--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <div class="navbar">
-    <h1>Petitions</h1>
+    <h1>Namechange Demo for Petitions</h1>
     <div class="search-container">
       <form action="/search" method="get" class="search-form">
         <input type="text" placeholder="Search for petitions" name="search" required>
