Final style change

--- a/src/main/resources/static/stylesheets/homeStyle.css
+++ b/src/main/resources/static/stylesheets/homeStyle.css
@@ -78,6 +78,10 @@
             padding: 2px;
         }
 
+        .signature-list {
+            list-style-type: none;
+        }
+
         .petition {
             display: flex;
             flex-direction: column;
